--- a/lista.htm
+++ b/lista.htm
@@ -6,88 +6,6 @@
         <title>Lista stanga</title>
     </head>
 <body>
-    <div class="sidebar">
-        <div class="logo_content">
-            <div class="logo">
-                <ion-icon name="cash-outline"></ion-icon>
-                <div class="logo_name">SiteRusu</div>
-            </div>
-            <ion-icon name="menu-outline" id="btn"></ion-icon>
-        </div>
-        <ul class="nav_list">
-            <!--<li>
-                    <ion-icon name="search-outline"></ion-icon>
-                    <input type="text" placeholder="Search...">
-                <span class="tooltip">Search</span>-->
-            </li>
-            <li>
-                <a href="#">
-                    <ion-icon name="folder-outline"></ion-icon>
-                    <span class="links_name">Proiect</span>
-                </a>
-                <span class="tooltip">Proiect</span>
-            </li>
-            <li>
-                <a href="#">
-                    <ion-icon name="folder-outline"></ion-icon>
-                    <span class="links_name">Proiect</span>
-                </a>
-               <span class="tooltip">Proiect</span>
-            </li>
-            <li>
-                <a href="#">
-                    <ion-icon name="folder-outline"></ion-icon>
-                    <span class="links_name">Proiect</span>
-                </a>
-                <span class="tooltip">Proiect</span>
-            </li>
-            <li>
-                <a href="#">
-                    <ion-icon name="folder-outline"></ion-icon>
-                    <span class="links_name">Proiect</span>
-                </a>
-                <span class="tooltip">Proiect</span>
-            </li>
-            <li>
-                <a href="#">
-                    <ion-icon name="folder-outline"></ion-icon>
-                    <span class="links_name">Proiect</span>
-                </a>
-                <span class="tooltip">Proiect</span>
-            </li>
-        </ul>
-        <div class="profile_content">
-            <!--<div class="profile">
-                <div class="profile_details">
-                    <img src="https://t3.ftcdn.net/jpg/03/46/83/96/360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg" alt=" ">
-                    <div class="name_job">
-                        <div class="name">Rusu Denis</div>
-                        <div class="job">Elev</div>
-                    </div>
-                </div>
-                <ion-icon name="log-out-outline" id="log_out"></ion-icon>
-            </div>-->
-        </div>
-    </div>
-    <div class="home_content">
-        <div class="text">Home Content</div>
-    </div>
-
-    <script>
-        let btn = document.querySelector("#btn");
-        let sidebar = document.querySelector(".sidebar");
-        let searchBtn = document.querySelector(".search-outline");
-
-        btn.onclick = function(){
-            sidebar.classList.toggle("active")
-        }
-        searchBtn.onclick = function(){
-            sidebar.classList.toggle("active")
-        }
-    </script>
-    
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <h1>salut</h1>
 </body>
 </html>
